crates/es-fluent/tests/compile_fail/fluent_display.rs
use es_fluent::FluentDisplay;

fn main() {}
